--- a/OnlineDostava/package.json
+++ b/OnlineDostava/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "angularx-social-login": "^4.1.0",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^14.2.4",
     "rxjs": "~7.5.0",
